GNOME Bugzilla – Bug 681636
gtlsconnection-gnutls.c:1488:6: warning: 'ret' may be used uninitialized in this function [-Wuninitialized]
Last modified: 2012-08-11 13:31:30 UTC
This one looks suspicious: ../../../tls/gnutls/gtlsconnection-gnutls.c:1488:6: warning: 'ret' may be used uninitialized in this function [-Wuninitialized] From: http://ostree.gnome.org/logs/gnomeos-3.6/glib-networking/i686/compile.log I'm not sure which way is the right fix; just initialize it to zero?
fixed. thanks. (fyi, I always build without optimization, so gcc doesn't give me uninitialized variable warnings. lame.)